app/assets/stylesheets/master.scss
/* ... */
.tab-content-sidebar {
  float: left;
  .tab-pane {
    width: 440px;
    color: $white;
    border-bottom: 1px solid $black;
    background-color: #4C4C4C;
    padding: 20px;
  }
  .active {
    display: block;
  }
}


.section-header {
  background-color: $sectionHeaderBg;
  border-bottom: 1px solid $sectionHeaderBorders;
  border-top: 1px solid $sectionHeaderBorders;
  color: #BBBBBB;
  float: left;
  font-size: 17px;
  height: 40px;
  line-height: 40px;
  text-align: center;
  width: 480px;
  position: relative;
  &:first-child {
    border-top: 0;
  }
}

section.pane {
  background-color: $sectionBg;
  border-top: 1px solid #858585;
  float: left;
  padding: 13px 20px;
  width: 440px;
  h3 {
    font-size: 19px;
    font-weight: normal;
    color: $white;
    margin-bottom: 16px;
  }
  ol {
    list-style-type: none;
    margin: 0;
    li {
      float: left;
      color: $black;
      font-size: 13px;
      font-weight: bold;
      vertical-align: top;
      line-height: 10px;
      margin-bottom: 20px;
      margin-right: 20px;
      width:210px;
      &:nth-child(even){
        margin:0;
      }
      a {
        display:block;
        &:hover {
          text-decoration: none;
        }
        &:hover .name {
          color: $black;
          text-decoration: underline;
        }
      }
    }
  }
  .name {
    color: $black;
    display:block;
    line-height: 10px;
    margin-left: 35px;
    margin-bottom: 5px;
    vertical-align: top;
  }
  .counts {
    color: #A7A7A7;
    font-size: 11px;
    font-weight: normal;
  }
}

#content {
  bottom: 0;
  left: 480px;
  overflow-y: scroll;
  position: fixed;
  right: 0;
  top: 42px;
}

nav.fixed-navigation {
  display: block;
  position: fixed;
  left: 480px;
  right: 0;
  top: 0;
  z-index: 8000;
  color: $white;
  font-size: 13px;
  background-color: #A7A7A7;
  border-bottom: 1px solid #999;
  padding-left: 12px;
  padding-right: 5px;
  .title {
    height: 40px;
    line-height: 40px;
  }
  .right-fixed {
    //float: right;
    //height: 40px;
    //min-width: 210px;
  }
  .desc {
    float: left;
    height: 40px;
    line-height: 40px;
    margin-right: 10px;
  }
}

.article-navigation {
  position: absolute;
  left: 0;
  right: 0;
}
article {
  background-color: $navListBg;
  border-bottom: 1px solid #999;
  border-top: 1px solid $lightTopBorderHighlight;
  color: #4C4C4C;
  display: block;
  font-size: 13px;
  width: auto;
  .score {
    color: #E1E1E1;
    font-size: 25px;
    float: right;
  }
  .article-body {
    color: $articleMeta;
    padding: 30px;
    &:hover {
      background-color: #CCCCCC;
    }
  }
  .meta {
    margin-bottom: 15px;
    margin-left: 90px;
    a {
      color: #00466C;
    }
  }
}

.icon {
  background-color: #CCCCCC;
  background-image: url(/assets/default-user-avatar.png);
  background-repeat: no-repeat;
  border: 2px solid $white;
  float: left;
  height: 56px;
  margin-right: 30px;
  width: 56px;
  @include border-radius(3px);
}

h1.article-title {
  font-size: 25px;
  line-height: 35px;
  margin: -7px 50px 0 90px;
  a {
    color: $articleTitle;
    &:hover {
      text-decoration: none;
      border-bottom: 2px solid $black;
    }
  }
}

article.single {
  position: absolute;
  left:0;
  right:0;
  h1 {
    font-size: 36px;
    margin-left: 0;
  }
  .article-body {
    background-color: #E1E1E1;
    min-width: 680px;
    padding: 60px;
  }
  p {
    font-size: 19px;
    line-height: 30px;
    margin-bottom: 40px;
  }
  ul {
    margin: 20px 0;
  }
  li {
    font-size: 19px;
    margin-bottom: 10px;
  }
  .meta {
    margin-left: 0;
  }
}
article.video {}
article.text {}
article.audio {}

article.single .contributors ul { //override
  border-top: 1px solid #B7B7B7;
  margin-top: 10px;
  li{
    margin-bottom:0;
  }
}

.contributors, .content-tags {
  margin-top: 50px;
  h4 {
    color: $lightTitle;
    font-size: 19px;
    font-weight: normal;
    margin-bottom:10px;
  }
}

.contributor {
  border-color: $lightTopBorderHighlight transparent $lightBottomBorderHighlight transparent;
  border-style: solid;
  border-width: 1px;
  margin: 0;
  padding: 5px 0;
  &:last-child {
    border-bottom-color:$lightTopBorderHighlight;
  }
}

.avatar {
  background-color: $avatarPlaceholder;
  background-image: url(/assets/default-user-avatar.png);
  background-repeat: no-repeat;
  border: 2px solid $white;
  float: left;
  height: 22px;
  margin-right: 10px;
  width: 22px;
  @include border-radius(2px);
  @include background-size(contain);
}

.media {
  margin: 0;
}

.media, .bd {
  color: $black;
  font-size: 13px;
  font-weight: bold;
  height: 24px;
  line-height: 24px;
  overflow: hidden;
  _overflow: visible;
  zoom: 1;
}

.media .img {
  float: left;
  margin-right: 10px;
}

.media .img img {
  display: block;
  height: 24px;
  width: 24px;
}

.media .imgExt {
  float: right;
  margin-left: 10px;
}

.letter-link {
  background-color: $lightButtonBg;
  color: $white;
  display:inline-block;
  font-weight:bold;
  height: 28px;
  line-height:28px;
  margin: 0 -2px 2px 0;
  padding: 0 10px;
  text-align: center;
  width: 18px;
  &:hover {
    background-color: $lightButtonHover;
    color: $white;
    text-decoration: none;
  }
  &:active {
    background-color: $lightButtonActive;
  }
}

.letter-link.other {
  width: 58px;
}

.pane.tag-nav {
  border-bottom: 0;
}

.pane.tag-results, .pane.contributor-results {
  border-top: 0;
  margin-top: 0;
  padding-top: 0;
}

.separator {
  color: $separatorColor;
  float: left;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  margin: 5px 0 0 0;
  padding: 10px 20px;
  width: 440px;
}

.resultcount {
  font-weight: normal;
  margin-left: 5px;
}

.content-tags {
  ul {
    border-top: 1px solid #B7B7B7;
    margin: 0px 0 20px 0;
    padding-top: 10px;
  }
}

.admin-table {
  margin-top: 20px;
}

.floated-admin-title {
  margin-bottom: 20px;
}
/* ... */

